--- a/skills6.ipynb
+++ b/skills6.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,305 +12,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
-       "      <th>5</th>\n",
-       "      <th>6</th>\n",
-       "      <th>7</th>\n",
-       "      <th>8</th>\n",
-       "      <th>9</th>\n",
-       "      <th>10</th>\n",
-       "      <th>11</th>\n",
-       "      <th>12</th>\n",
-       "      <th>13</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1.42e+01</td>\n",
-       "      <td>1.71e+00</td>\n",
-       "      <td>2.43e+00</td>\n",
-       "      <td>1.56e+01</td>\n",
-       "      <td>1.27e+02</td>\n",
-       "      <td>2.80e+00</td>\n",
-       "      <td>3.06e+00</td>\n",
-       "      <td>2.80e-01</td>\n",
-       "      <td>2.29e+00</td>\n",
-       "      <td>5.64e+00</td>\n",
-       "      <td>1.04e+00</td>\n",
-       "      <td>3.92e+00</td>\n",
-       "      <td>1065</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1.32e+01</td>\n",
-       "      <td>1.78e+00</td>\n",
-       "      <td>2.14e+00</td>\n",
-       "      <td>1.12e+01</td>\n",
-       "      <td>1.00e+02</td>\n",
-       "      <td>2.65e+00</td>\n",
-       "      <td>2.76e+00</td>\n",
-       "      <td>2.60e-01</td>\n",
-       "      <td>1.28e+00</td>\n",
-       "      <td>4.38e+00</td>\n",
-       "      <td>1.05e+00</td>\n",
-       "      <td>3.40e+00</td>\n",
-       "      <td>1050</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1.32e+01</td>\n",
-       "      <td>2.36e+00</td>\n",
-       "      <td>2.67e+00</td>\n",
-       "      <td>1.86e+01</td>\n",
-       "      <td>1.01e+02</td>\n",
-       "      <td>2.80e+00</td>\n",
-       "      <td>3.24e+00</td>\n",
-       "      <td>3.00e-01</td>\n",
-       "      <td>2.81e+00</td>\n",
-       "      <td>5.68e+00</td>\n",
-       "      <td>1.03e+00</td>\n",
-       "      <td>3.17e+00</td>\n",
-       "      <td>1185</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1.44e+01</td>\n",
-       "      <td>1.95e+00</td>\n",
-       "      <td>2.50e+00</td>\n",
-       "      <td>1.68e+01</td>\n",
-       "      <td>1.13e+02</td>\n",
-       "      <td>3.85e+00</td>\n",
-       "      <td>3.49e+00</td>\n",
-       "      <td>2.40e-01</td>\n",
-       "      <td>2.18e+00</td>\n",
-       "      <td>7.80e+00</td>\n",
-       "      <td>8.60e-01</td>\n",
-       "      <td>3.45e+00</td>\n",
-       "      <td>1480</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1.32e+01</td>\n",
-       "      <td>2.59e+00</td>\n",
-       "      <td>2.87e+00</td>\n",
-       "      <td>21</td>\n",
-       "      <td>1.18e+02</td>\n",
-       "      <td>2.80e+00</td>\n",
-       "      <td>2.69e+00</td>\n",
-       "      <td>3.90e-01</td>\n",
-       "      <td>1.82e+00</td>\n",
-       "      <td>4.32e+00</td>\n",
-       "      <td>1.04e+00</td>\n",
-       "      <td>2.93e+00</td>\n",
-       "      <td>735</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>173</th>\n",
-       "      <td>3</td>\n",
-       "      <td>1.37e+01</td>\n",
-       "      <td>5.65e+00</td>\n",
-       "      <td>2.45e+00</td>\n",
-       "      <td>2.05e+01</td>\n",
-       "      <td>9.50e+01</td>\n",
-       "      <td>1.68e+00</td>\n",
-       "      <td>6.10e-01</td>\n",
-       "      <td>5.20e-01</td>\n",
-       "      <td>1.06e+00</td>\n",
-       "      <td>7.70e+00</td>\n",
-       "      <td>6.40e-01</td>\n",
-       "      <td>1.74e+00</td>\n",
-       "      <td>740</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>174</th>\n",
-       "      <td>3</td>\n",
-       "      <td>1.34e+01</td>\n",
-       "      <td>3.91e+00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>23</td>\n",
-       "      <td>1.02e+02</td>\n",
-       "      <td>1.80e+00</td>\n",
-       "      <td>0,75</td>\n",
-       "      <td>4.30e-01</td>\n",
-       "      <td>1.41e+00</td>\n",
-       "      <td>7.30e+00</td>\n",
-       "      <td>7.00e-01</td>\n",
-       "      <td>1.56e+00</td>\n",
-       "      <td>750</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>175</th>\n",
-       "      <td>3</td>\n",
-       "      <td>1.33e+01</td>\n",
-       "      <td>4.28e+00</td>\n",
-       "      <td>2.26e+00</td>\n",
-       "      <td>20</td>\n",
-       "      <td>1.20e+02</td>\n",
-       "      <td>1.59e+00</td>\n",
-       "      <td>6.90e-01</td>\n",
-       "      <td>4.30e-01</td>\n",
-       "      <td>1.35e+00</td>\n",
-       "      <td>1.02e+01</td>\n",
-       "      <td>5.90e-01</td>\n",
-       "      <td>1.56e+00</td>\n",
-       "      <td>835</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>176</th>\n",
-       "      <td>3</td>\n",
-       "      <td>1.32e+01</td>\n",
-       "      <td>2.59e+00</td>\n",
-       "      <td>2.37e+00</td>\n",
-       "      <td>20</td>\n",
-       "      <td>1.20e+02</td>\n",
-       "      <td>1.65e+00</td>\n",
-       "      <td>6.80e-01</td>\n",
-       "      <td>5.30e-01</td>\n",
-       "      <td>1.46e+00</td>\n",
-       "      <td>9.30e+00</td>\n",
-       "      <td>6.00e-01</td>\n",
-       "      <td>1.62e+00</td>\n",
-       "      <td>840</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>177</th>\n",
-       "      <td>3</td>\n",
-       "      <td>1.41e+01</td>\n",
-       "      <td>4.10e+00</td>\n",
-       "      <td>2.74e+00</td>\n",
-       "      <td>2.45e+01</td>\n",
-       "      <td>9.60e+01</td>\n",
-       "      <td>2.05e+00</td>\n",
-       "      <td>7.60e-01</td>\n",
-       "      <td>5.60e-01</td>\n",
-       "      <td>1.35e+00</td>\n",
-       "      <td>9.20e+00</td>\n",
-       "      <td>6.10e-01</td>\n",
-       "      <td>1.60e+00</td>\n",
-       "      <td>560</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>178 rows × 14 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     0        1        2        3        4        5        6        7   \\\n",
-       "0     1 1.42e+01 1.71e+00 2.43e+00 1.56e+01 1.27e+02 2.80e+00 3.06e+00   \n",
-       "1     1 1.32e+01 1.78e+00 2.14e+00 1.12e+01 1.00e+02 2.65e+00 2.76e+00   \n",
-       "2     1 1.32e+01 2.36e+00 2.67e+00 1.86e+01 1.01e+02 2.80e+00 3.24e+00   \n",
-       "3     1 1.44e+01 1.95e+00 2.50e+00 1.68e+01 1.13e+02 3.85e+00 3.49e+00   \n",
-       "4     1 1.32e+01 2.59e+00 2.87e+00       21 1.18e+02 2.80e+00 2.69e+00   \n",
-       "..   ..      ...      ...      ...      ...      ...      ...      ...   \n",
-       "173   3 1.37e+01 5.65e+00 2.45e+00 2.05e+01 9.50e+01 1.68e+00 6.10e-01   \n",
-       "174   3 1.34e+01 3.91e+00      NaN       23 1.02e+02 1.80e+00     0,75   \n",
-       "175   3 1.33e+01 4.28e+00 2.26e+00       20 1.20e+02 1.59e+00 6.90e-01   \n",
-       "176   3 1.32e+01 2.59e+00 2.37e+00       20 1.20e+02 1.65e+00 6.80e-01   \n",
-       "177   3 1.41e+01 4.10e+00 2.74e+00 2.45e+01 9.60e+01 2.05e+00 7.60e-01   \n",
-       "\n",
-       "          8        9        10       11       12    13  \n",
-       "0   2.80e-01 2.29e+00 5.64e+00 1.04e+00 3.92e+00  1065  \n",
-       "1   2.60e-01 1.28e+00 4.38e+00 1.05e+00 3.40e+00  1050  \n",
-       "2   3.00e-01 2.81e+00 5.68e+00 1.03e+00 3.17e+00  1185  \n",
-       "3   2.40e-01 2.18e+00 7.80e+00 8.60e-01 3.45e+00  1480  \n",
-       "4   3.90e-01 1.82e+00 4.32e+00 1.04e+00 2.93e+00   735  \n",
-       "..       ...      ...      ...      ...      ...   ...  \n",
-       "173 5.20e-01 1.06e+00 7.70e+00 6.40e-01 1.74e+00   740  \n",
-       "174 4.30e-01 1.41e+00 7.30e+00 7.00e-01 1.56e+00   750  \n",
-       "175 4.30e-01 1.35e+00 1.02e+01 5.90e-01 1.56e+00   835  \n",
-       "176 5.30e-01 1.46e+00 9.30e+00 6.00e-01 1.62e+00   840  \n",
-       "177 5.60e-01 1.35e+00 9.20e+00 6.10e-01 1.60e+00   560  \n",
-       "\n",
-       "[178 rows x 14 columns]"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "data = pd.read_excel('Wine.xlsx', header=None)\n",
-    "data"
+    "# Read the excel data without headers\n",
+    "data = pd.read_excel('Wine.xlsx', header=None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.dtypes\n",
+    "# Convert all data types to numeric and change value to NaN of not possible\n",
     "data = data.apply(pd.to_numeric, errors='coerce')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Get missing values\n",
+    "# Get missing values and drop them\n",
     "data.isna().sum()\n",
     "data = data.dropna()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/kj/b9_5ptsn2hx0g3dz6fvn6nz40000gn/T/ipykernel_9253/1811317451.py:3: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '0     1.06e+00\n",
+      "1     1.05e+00\n",
+      "2     1.19e+00\n",
+      "3     1.48e+00\n",
+      "4     7.35e-01\n",
+      "        ...   \n",
+      "172   6.60e-01\n",
+      "173   7.40e-01\n",
+      "175   8.35e-01\n",
+      "176   8.40e-01\n",
+      "177   5.60e-01\n",
+      "Name: 13, Length: 168, dtype: float64' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
+      "  data.iloc[:, -1] /=1000\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -364,7 +118,7 @@
        "      <td>5.64e+00</td>\n",
        "      <td>1.04e+00</td>\n",
        "      <td>3.92e+00</td>\n",
-       "      <td>1065</td>\n",
+       "      <td>1.06e+00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -381,7 +135,7 @@
        "      <td>4.38e+00</td>\n",
        "      <td>1.05e+00</td>\n",
        "      <td>3.40e+00</td>\n",
-       "      <td>1050</td>\n",
+       "      <td>1.05e+00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -398,7 +152,7 @@
        "      <td>5.68e+00</td>\n",
        "      <td>1.03e+00</td>\n",
        "      <td>3.17e+00</td>\n",
-       "      <td>1185</td>\n",
+       "      <td>1.19e+00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -415,7 +169,7 @@
        "      <td>7.80e+00</td>\n",
        "      <td>8.60e-01</td>\n",
        "      <td>3.45e+00</td>\n",
-       "      <td>1480</td>\n",
+       "      <td>1.48e+00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -432,7 +186,7 @@
        "      <td>4.32e+00</td>\n",
        "      <td>1.04e+00</td>\n",
        "      <td>2.93e+00</td>\n",
-       "      <td>735</td>\n",
+       "      <td>7.35e-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -466,7 +220,7 @@
        "      <td>9.70e+00</td>\n",
        "      <td>6.20e-01</td>\n",
        "      <td>1.71e+00</td>\n",
-       "      <td>660</td>\n",
+       "      <td>6.60e-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>173</th>\n",
@@ -483,7 +237,7 @@
        "      <td>7.70e+00</td>\n",
        "      <td>6.40e-01</td>\n",
        "      <td>1.74e+00</td>\n",
-       "      <td>740</td>\n",
+       "      <td>7.40e-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>175</th>\n",
@@ -500,7 +254,7 @@
        "      <td>1.02e+01</td>\n",
        "      <td>5.90e-01</td>\n",
        "      <td>1.56e+00</td>\n",
-       "      <td>835</td>\n",
+       "      <td>8.35e-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>176</th>\n",
@@ -517,7 +271,7 @@
        "      <td>9.30e+00</td>\n",
        "      <td>6.00e-01</td>\n",
        "      <td>1.62e+00</td>\n",
-       "      <td>840</td>\n",
+       "      <td>8.40e-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>177</th>\n",
@@ -534,7 +288,7 @@
        "      <td>9.20e+00</td>\n",
        "      <td>6.10e-01</td>\n",
        "      <td>1.60e+00</td>\n",
-       "      <td>560</td>\n",
+       "      <td>5.60e-01</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -555,29 +309,31 @@
        "176   3 1.32e+01 2.59e+00 2.37e+00 2.00e+01 1.20e+02 1.65e+00 6.80e-01   \n",
        "177   3 1.41e+01 4.10e+00 2.74e+00 2.45e+01 9.60e+01 2.05e+00 7.60e-01   \n",
        "\n",
-       "          8        9        10       11       12    13  \n",
-       "0   2.80e-01 2.29e+00 5.64e+00 1.04e+00 3.92e+00  1065  \n",
-       "1   2.60e-01 1.28e+00 4.38e+00 1.05e+00 3.40e+00  1050  \n",
-       "2   3.00e-01 2.81e+00 5.68e+00 1.03e+00 3.17e+00  1185  \n",
-       "3   2.40e-01 2.18e+00 7.80e+00 8.60e-01 3.45e+00  1480  \n",
-       "4   3.90e-01 1.82e+00 4.32e+00 1.04e+00 2.93e+00   735  \n",
-       "..       ...      ...      ...      ...      ...   ...  \n",
-       "172 4.40e-01 1.24e+00 9.70e+00 6.20e-01 1.71e+00   660  \n",
-       "173 5.20e-01 1.06e+00 7.70e+00 6.40e-01 1.74e+00   740  \n",
-       "175 4.30e-01 1.35e+00 1.02e+01 5.90e-01 1.56e+00   835  \n",
-       "176 5.30e-01 1.46e+00 9.30e+00 6.00e-01 1.62e+00   840  \n",
-       "177 5.60e-01 1.35e+00 9.20e+00 6.10e-01 1.60e+00   560  \n",
+       "          8        9        10       11       12       13  \n",
+       "0   2.80e-01 2.29e+00 5.64e+00 1.04e+00 3.92e+00 1.06e+00  \n",
+       "1   2.60e-01 1.28e+00 4.38e+00 1.05e+00 3.40e+00 1.05e+00  \n",
+       "2   3.00e-01 2.81e+00 5.68e+00 1.03e+00 3.17e+00 1.19e+00  \n",
+       "3   2.40e-01 2.18e+00 7.80e+00 8.60e-01 3.45e+00 1.48e+00  \n",
+       "4   3.90e-01 1.82e+00 4.32e+00 1.04e+00 2.93e+00 7.35e-01  \n",
+       "..       ...      ...      ...      ...      ...      ...  \n",
+       "172 4.40e-01 1.24e+00 9.70e+00 6.20e-01 1.71e+00 6.60e-01  \n",
+       "173 5.20e-01 1.06e+00 7.70e+00 6.40e-01 1.74e+00 7.40e-01  \n",
+       "175 4.30e-01 1.35e+00 1.02e+01 5.90e-01 1.56e+00 8.35e-01  \n",
+       "176 5.30e-01 1.46e+00 9.30e+00 6.00e-01 1.62e+00 8.40e-01  \n",
+       "177 5.60e-01 1.35e+00 9.20e+00 6.10e-01 1.60e+00 5.60e-01  \n",
        "\n",
        "[168 rows x 14 columns]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Change the display precision for scientific notation \n",
     "pd.set_option('display.float_format', '{:.2e}'.format)\n",
+    "data.iloc[:, -1] /=1000\n",
     "data"
    ]
   }
