--- a/skills6.ipynb
+++ b/skills6.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,28 +43,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/kj/b9_5ptsn2hx0g3dz6fvn6nz40000gn/T/ipykernel_9253/1811317451.py:3: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '0     1.06e+00\n",
-      "1     1.05e+00\n",
-      "2     1.19e+00\n",
-      "3     1.48e+00\n",
-      "4     7.35e-01\n",
-      "        ...   \n",
-      "172   6.60e-01\n",
-      "173   7.40e-01\n",
-      "175   8.35e-01\n",
-      "176   8.40e-01\n",
-      "177   5.60e-01\n",
-      "Name: 13, Length: 168, dtype: float64' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
-      "  data.iloc[:, -1] /=1000\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -118,7 +99,7 @@
        "      <td>5.64e+00</td>\n",
        "      <td>1.04e+00</td>\n",
        "      <td>3.92e+00</td>\n",
-       "      <td>1.06e+00</td>\n",
+       "      <td>1.06e-03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -135,7 +116,7 @@
        "      <td>4.38e+00</td>\n",
        "      <td>1.05e+00</td>\n",
        "      <td>3.40e+00</td>\n",
-       "      <td>1.05e+00</td>\n",
+       "      <td>1.05e-03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -152,7 +133,7 @@
        "      <td>5.68e+00</td>\n",
        "      <td>1.03e+00</td>\n",
        "      <td>3.17e+00</td>\n",
-       "      <td>1.19e+00</td>\n",
+       "      <td>1.19e-03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -169,7 +150,7 @@
        "      <td>7.80e+00</td>\n",
        "      <td>8.60e-01</td>\n",
        "      <td>3.45e+00</td>\n",
-       "      <td>1.48e+00</td>\n",
+       "      <td>1.48e-03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -186,7 +167,7 @@
        "      <td>4.32e+00</td>\n",
        "      <td>1.04e+00</td>\n",
        "      <td>2.93e+00</td>\n",
-       "      <td>7.35e-01</td>\n",
+       "      <td>7.35e-04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -220,7 +201,7 @@
        "      <td>9.70e+00</td>\n",
        "      <td>6.20e-01</td>\n",
        "      <td>1.71e+00</td>\n",
-       "      <td>6.60e-01</td>\n",
+       "      <td>6.60e-04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>173</th>\n",
@@ -237,7 +218,7 @@
        "      <td>7.70e+00</td>\n",
        "      <td>6.40e-01</td>\n",
        "      <td>1.74e+00</td>\n",
-       "      <td>7.40e-01</td>\n",
+       "      <td>7.40e-04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>175</th>\n",
@@ -254,7 +235,7 @@
        "      <td>1.02e+01</td>\n",
        "      <td>5.90e-01</td>\n",
        "      <td>1.56e+00</td>\n",
-       "      <td>8.35e-01</td>\n",
+       "      <td>8.35e-04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>176</th>\n",
@@ -271,7 +252,7 @@
        "      <td>9.30e+00</td>\n",
        "      <td>6.00e-01</td>\n",
        "      <td>1.62e+00</td>\n",
-       "      <td>8.40e-01</td>\n",
+       "      <td>8.40e-04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>177</th>\n",
@@ -288,7 +269,7 @@
        "      <td>9.20e+00</td>\n",
        "      <td>6.10e-01</td>\n",
        "      <td>1.60e+00</td>\n",
-       "      <td>5.60e-01</td>\n",
+       "      <td>5.60e-04</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -310,31 +291,40 @@
        "177   3 1.41e+01 4.10e+00 2.74e+00 2.45e+01 9.60e+01 2.05e+00 7.60e-01   \n",
        "\n",
        "          8        9        10       11       12       13  \n",
-       "0   2.80e-01 2.29e+00 5.64e+00 1.04e+00 3.92e+00 1.06e+00  \n",
-       "1   2.60e-01 1.28e+00 4.38e+00 1.05e+00 3.40e+00 1.05e+00  \n",
-       "2   3.00e-01 2.81e+00 5.68e+00 1.03e+00 3.17e+00 1.19e+00  \n",
-       "3   2.40e-01 2.18e+00 7.80e+00 8.60e-01 3.45e+00 1.48e+00  \n",
-       "4   3.90e-01 1.82e+00 4.32e+00 1.04e+00 2.93e+00 7.35e-01  \n",
+       "0   2.80e-01 2.29e+00 5.64e+00 1.04e+00 3.92e+00 1.06e-03  \n",
+       "1   2.60e-01 1.28e+00 4.38e+00 1.05e+00 3.40e+00 1.05e-03  \n",
+       "2   3.00e-01 2.81e+00 5.68e+00 1.03e+00 3.17e+00 1.19e-03  \n",
+       "3   2.40e-01 2.18e+00 7.80e+00 8.60e-01 3.45e+00 1.48e-03  \n",
+       "4   3.90e-01 1.82e+00 4.32e+00 1.04e+00 2.93e+00 7.35e-04  \n",
        "..       ...      ...      ...      ...      ...      ...  \n",
-       "172 4.40e-01 1.24e+00 9.70e+00 6.20e-01 1.71e+00 6.60e-01  \n",
-       "173 5.20e-01 1.06e+00 7.70e+00 6.40e-01 1.74e+00 7.40e-01  \n",
-       "175 4.30e-01 1.35e+00 1.02e+01 5.90e-01 1.56e+00 8.35e-01  \n",
-       "176 5.30e-01 1.46e+00 9.30e+00 6.00e-01 1.62e+00 8.40e-01  \n",
-       "177 5.60e-01 1.35e+00 9.20e+00 6.10e-01 1.60e+00 5.60e-01  \n",
+       "172 4.40e-01 1.24e+00 9.70e+00 6.20e-01 1.71e+00 6.60e-04  \n",
+       "173 5.20e-01 1.06e+00 7.70e+00 6.40e-01 1.74e+00 7.40e-04  \n",
+       "175 4.30e-01 1.35e+00 1.02e+01 5.90e-01 1.56e+00 8.35e-04  \n",
+       "176 5.30e-01 1.46e+00 9.30e+00 6.00e-01 1.62e+00 8.40e-04  \n",
+       "177 5.60e-01 1.35e+00 9.20e+00 6.10e-01 1.60e+00 5.60e-04  \n",
        "\n",
        "[168 rows x 14 columns]"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Change the display precision for scientific notation \n",
-    "pd.set_option('display.float_format', '{:.2e}'.format)\n",
+    "# pd.set_option('display.float_format', '{:.2e}'.format)\n",
     "data.iloc[:, -1] /=1000\n",
     "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.to_csv('clean_output.csv', index=False)"
    ]
   }
  ],
