--- a/skills6.ipynb
+++ b/skills6.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,9 +43,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\bradn\\AppData\\Local\\Temp\\ipykernel_15096\\4037282163.py:3: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '0     1.06e+00\n",
+      "1     1.05e+00\n",
+      "2     1.19e+00\n",
+      "3     1.48e+00\n",
+      "4     7.35e-01\n",
+      "        ...   \n",
+      "172   6.60e-01\n",
+      "173   7.40e-01\n",
+      "175   8.35e-01\n",
+      "176   8.40e-01\n",
+      "177   5.60e-01\n",
+      "Name: 13, Length: 168, dtype: float64' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
+      "  data.iloc[:, -1] /=1000\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -99,7 +118,7 @@
        "      <td>5.64e+00</td>\n",
        "      <td>1.04e+00</td>\n",
        "      <td>3.92e+00</td>\n",
-       "      <td>1.06e-03</td>\n",
+       "      <td>1.06e+00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -116,7 +135,7 @@
        "      <td>4.38e+00</td>\n",
        "      <td>1.05e+00</td>\n",
        "      <td>3.40e+00</td>\n",
-       "      <td>1.05e-03</td>\n",
+       "      <td>1.05e+00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -133,7 +152,7 @@
        "      <td>5.68e+00</td>\n",
        "      <td>1.03e+00</td>\n",
        "      <td>3.17e+00</td>\n",
-       "      <td>1.19e-03</td>\n",
+       "      <td>1.19e+00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -150,7 +169,7 @@
        "      <td>7.80e+00</td>\n",
        "      <td>8.60e-01</td>\n",
        "      <td>3.45e+00</td>\n",
-       "      <td>1.48e-03</td>\n",
+       "      <td>1.48e+00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -167,7 +186,7 @@
        "      <td>4.32e+00</td>\n",
        "      <td>1.04e+00</td>\n",
        "      <td>2.93e+00</td>\n",
-       "      <td>7.35e-04</td>\n",
+       "      <td>7.35e-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -201,7 +220,7 @@
        "      <td>9.70e+00</td>\n",
        "      <td>6.20e-01</td>\n",
        "      <td>1.71e+00</td>\n",
-       "      <td>6.60e-04</td>\n",
+       "      <td>6.60e-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>173</th>\n",
@@ -218,7 +237,7 @@
        "      <td>7.70e+00</td>\n",
        "      <td>6.40e-01</td>\n",
        "      <td>1.74e+00</td>\n",
-       "      <td>7.40e-04</td>\n",
+       "      <td>7.40e-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>175</th>\n",
@@ -235,7 +254,7 @@
        "      <td>1.02e+01</td>\n",
        "      <td>5.90e-01</td>\n",
        "      <td>1.56e+00</td>\n",
-       "      <td>8.35e-04</td>\n",
+       "      <td>8.35e-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>176</th>\n",
@@ -252,7 +271,7 @@
        "      <td>9.30e+00</td>\n",
        "      <td>6.00e-01</td>\n",
        "      <td>1.62e+00</td>\n",
-       "      <td>8.40e-04</td>\n",
+       "      <td>8.40e-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>177</th>\n",
@@ -269,7 +288,7 @@
        "      <td>9.20e+00</td>\n",
        "      <td>6.10e-01</td>\n",
        "      <td>1.60e+00</td>\n",
-       "      <td>5.60e-04</td>\n",
+       "      <td>5.60e-01</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -291,22 +310,22 @@
        "177   3 1.41e+01 4.10e+00 2.74e+00 2.45e+01 9.60e+01 2.05e+00 7.60e-01   \n",
        "\n",
        "          8        9        10       11       12       13  \n",
-       "0   2.80e-01 2.29e+00 5.64e+00 1.04e+00 3.92e+00 1.06e-03  \n",
-       "1   2.60e-01 1.28e+00 4.38e+00 1.05e+00 3.40e+00 1.05e-03  \n",
-       "2   3.00e-01 2.81e+00 5.68e+00 1.03e+00 3.17e+00 1.19e-03  \n",
-       "3   2.40e-01 2.18e+00 7.80e+00 8.60e-01 3.45e+00 1.48e-03  \n",
-       "4   3.90e-01 1.82e+00 4.32e+00 1.04e+00 2.93e+00 7.35e-04  \n",
+       "0   2.80e-01 2.29e+00 5.64e+00 1.04e+00 3.92e+00 1.06e+00  \n",
+       "1   2.60e-01 1.28e+00 4.38e+00 1.05e+00 3.40e+00 1.05e+00  \n",
+       "2   3.00e-01 2.81e+00 5.68e+00 1.03e+00 3.17e+00 1.19e+00  \n",
+       "3   2.40e-01 2.18e+00 7.80e+00 8.60e-01 3.45e+00 1.48e+00  \n",
+       "4   3.90e-01 1.82e+00 4.32e+00 1.04e+00 2.93e+00 7.35e-01  \n",
        "..       ...      ...      ...      ...      ...      ...  \n",
-       "172 4.40e-01 1.24e+00 9.70e+00 6.20e-01 1.71e+00 6.60e-04  \n",
-       "173 5.20e-01 1.06e+00 7.70e+00 6.40e-01 1.74e+00 7.40e-04  \n",
-       "175 4.30e-01 1.35e+00 1.02e+01 5.90e-01 1.56e+00 8.35e-04  \n",
-       "176 5.30e-01 1.46e+00 9.30e+00 6.00e-01 1.62e+00 8.40e-04  \n",
-       "177 5.60e-01 1.35e+00 9.20e+00 6.10e-01 1.60e+00 5.60e-04  \n",
+       "172 4.40e-01 1.24e+00 9.70e+00 6.20e-01 1.71e+00 6.60e-01  \n",
+       "173 5.20e-01 1.06e+00 7.70e+00 6.40e-01 1.74e+00 7.40e-01  \n",
+       "175 4.30e-01 1.35e+00 1.02e+01 5.90e-01 1.56e+00 8.35e-01  \n",
+       "176 5.30e-01 1.46e+00 9.30e+00 6.00e-01 1.62e+00 8.40e-01  \n",
+       "177 5.60e-01 1.35e+00 9.20e+00 6.10e-01 1.60e+00 5.60e-01  \n",
        "\n",
        "[168 rows x 14 columns]"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
