--- a/skills_6 PCA.ipynb
+++ b/skills_6 PCA.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from sklearn.decomposition import PCA\n",
-    "import plotly.express as px"
+    "import plotly.express as px\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +238,7 @@
        "max      4.000000    1.680000  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,12 +276,21 @@
     "\n",
     "    fig = px.scatter(components, x=0, y=1, color=classes,\n",
     "                     labels={'0': f'PC1 {explained_variance_ratio[0]*100:.2f}%', '1': f'PC2 {explained_variance_ratio[1]*100:.2f}%'})\n",
-    "    fig.show()"
+    "    fig.show()\n",
+    "\n",
+    "def mean_center(df):\n",
+    "    return df - df.mean()\n",
+    "    \n",
+    "def autoscale(df):\n",
+    "    return (df - df.mean()) / df.std()\n",
+    "\n",
+    "def pareto_scale(df):\n",
+    "    return (df - df.mean()) / np.sqrt(df.std())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1716,16 +1726,13 @@
     }
    ],
    "source": [
-    "def mean_center(df):\n",
-    "    return df - df.mean()\n",
-    "\n",
     "df_meancentered = mean_center(feature_df)\n",
     "PCAplotting(df_meancentered, data['0'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -3161,16 +3168,13 @@
     }
    ],
    "source": [
-    "def autoscale(df):\n",
-    "    return (df - df.mean()) / df.std()\n",
-    "\n",
     "df_autoscaled = autoscale(feature_df)\n",
     "PCAplotting(df_autoscaled, data['0'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -4606,11 +4610,6 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "\n",
-    "def pareto_scale(df):\n",
-    "    return (df - df.mean()) / np.sqrt(df.std())\n",
-    "\n",
     "df_paretoscaled = pareto_scale(feature_df)\n",
     "PCAplotting(df_paretoscaled, data['0'])"
    ]
